force-app/main/default/objects/Invoice_Promo_Line_Item__c/fields/Group_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Display_Name__c</fullName>
    <formula>Promo_Line_Item__r.Group_Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Display Name</label>
    <type>Text</type>
</CustomField>