force-app/main/default/objects/Invoice_Promo_Line_Item__c/fields/Item_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Display_Name__c</fullName>
    <formula>Promo_Line_Item__r.Item_Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Display Name</label>
    <type>Text</type>
</CustomField>