force-app/main/default/objects/Invoice_Promo_Line_Item__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoice Promo Line Items</relationshipLabel>
    <relationshipName>Invoice_Promo_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>