force-app/main/default/objects/Invoice_Promo_Line_Item__c/recordTypes/Invoice_Promo_Line_Item_RT_Sales_Targeted.recordType-meta.xml
<RecordType>
    <fullName>Invoice_Promo_Line_Item_RT_Sales_Targeted</fullName>
    <active>true</active>
    <label>Invoice Promo Line Item RT (Sales Targeted)</label>
</RecordType>